@@ -1,6 +1,8 @@
 Changes since version 3.1.0
 ---------------------------
 
+- Added compatibility with Python 2.5.
+
 - Fixed a bug with the IceGrid allocate and sessionAllocation demos 
   where the session would not be destroyed in the event of an 
   allocation failure.
